--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,5 +30,6 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile('com.estimote:proximity-sdk:1.0.2')
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.estimote:proximity-sdk:1.0.2'
 }
