--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.estimote.react">
 
+    <application>
+        <receiver android:name="com.estimote.react.NotificationCancelListener" android:exported="false" />
+    </application>
+
 </manifest>
